[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/BubbleSpriteSheet2.png" type="Texture" id=1]
[ext_resource path="res://UI/OptionsMenu.gd" type="Script" id=2]

[node name="OptionsMenu" type="Popup"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 330 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.0
margin_top = -144.0
margin_right = 134.0
margin_bottom = 144.0
rect_min_size = Vector2( 268, 288 )
alignment = 1

[node name="OptionsTitleLabel" type="Label" parent="Panel/VBoxContainer"]
margin_top = 15.0
margin_right = 268.0
margin_bottom = 29.0
text = "Options"
align = 1

[node name="Seperation" type="CenterContainer" parent="Panel/VBoxContainer"]
margin_top = 33.0
margin_right = 268.0
margin_bottom = 57.0

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Seperation"]
margin_left = 14.0
margin_right = 254.0
margin_bottom = 24.0
rect_min_size = Vector2( 240, 24 )
texture = ExtResource( 1 )
expand = true

[node name="MusicLabel" type="Label" parent="Panel/VBoxContainer"]
margin_top = 61.0
margin_right = 268.0
margin_bottom = 75.0
text = "Music Volume"
align = 1

[node name="MusicSlider" type="HSlider" parent="Panel/VBoxContainer"]
margin_top = 79.0
margin_right = 268.0
margin_bottom = 95.0
min_value = -10.0
max_value = 0.0
value = -3.0

[node name="SoundLabel" type="Label" parent="Panel/VBoxContainer"]
margin_top = 99.0
margin_right = 268.0
margin_bottom = 113.0
text = "Sound Volume"
align = 1

[node name="SoundSlider" type="HSlider" parent="Panel/VBoxContainer"]
margin_top = 117.0
margin_right = 268.0
margin_bottom = 133.0
min_value = -10.0
max_value = 0.0
value = -3.0

[node name="Seperation2" type="CenterContainer" parent="Panel/VBoxContainer"]
margin_top = 137.0
margin_right = 268.0
margin_bottom = 161.0

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Seperation2"]
margin_left = 14.0
margin_right = 254.0
margin_bottom = 24.0
rect_min_size = Vector2( 240, 24 )
texture = ExtResource( 1 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="Panel/VBoxContainer"]
margin_top = 165.0
margin_right = 268.0
margin_bottom = 217.0

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer/CenterContainer"]
margin_left = 76.0
margin_right = 191.0
margin_bottom = 52.0
columns = 2

[node name="SymbolButton" type="Button" parent="Panel/VBoxContainer/CenterContainer/GridContainer"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
toggle_mode = true

[node name="SymbolLabel" type="Label" parent="Panel/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 28.0
margin_top = 5.0
margin_right = 115.0
margin_bottom = 19.0
text = "Symbol Mode"
align = 1

[node name="FullscreenButton" type="Button" parent="Panel/VBoxContainer/CenterContainer/GridContainer"]
margin_top = 28.0
margin_right = 24.0
margin_bottom = 52.0
rect_min_size = Vector2( 24, 24 )

[node name="FullScreenLabel" type="Label" parent="Panel/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 28.0
margin_top = 33.0
margin_right = 115.0
margin_bottom = 47.0
text = "Fullscreen"
align = 1

[node name="Seperation3" type="CenterContainer" parent="Panel/VBoxContainer"]
margin_top = 221.0
margin_right = 268.0
margin_bottom = 245.0

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Seperation3"]
margin_left = 14.0
margin_right = 254.0
margin_bottom = 24.0
rect_min_size = Vector2( 240, 24 )
texture = ExtResource( 1 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 249.0
margin_right = 268.0
margin_bottom = 273.0
alignment = 1

[node name="DoneButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 103.0
margin_right = 127.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )

[node name="DoneLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 131.0
margin_top = 5.0
margin_right = 165.0
margin_bottom = 19.0
text = "Done"

[connection signal="value_changed" from="Panel/VBoxContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="toggled" from="Panel/VBoxContainer/CenterContainer/GridContainer/SymbolButton" to="." method="_on_SymbolButton_toggled"]
[connection signal="pressed" from="Panel/VBoxContainer/CenterContainer/GridContainer/FullscreenButton" to="." method="_on_FullscreenButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/DoneButton" to="." method="_on_DoneButton_pressed"]
